parr2014definitive/ch06/csv/grammar/CSV.g4
grammar CSV;

file : header row+ ;
header : row ;

row : field (',' field)* '\r'? '\n' ;
field : TEXT
    | STRING
    |
    ;

// Explicit Tokens
TEXT : ~[,\r\n"]+ ;
STRING : '"' ('""' | ~'"')* '"' ;
